REOPENED84162
media-exit-fullscreen-button (and related enums) is unnecessary and should be removed.
https://bugs.webkit.org/show_bug.cgi?id=84162
Summary media-exit-fullscreen-button (and related enums) is unnecessary and should be...
Jer Noble
Reported 2012-04-17 10:26:19 PDT
media-exit-fullscreen-button (and related enums) is unnecessary and should be removed.
Attachments
Patch (5.39 KB, patch)
2012-04-17 12:12 PDT, Jer Noble
webkit.review.bot: commit-queue-
Jer Noble
Comment 1 2012-04-17 10:28:19 PDT
That keyword was added in http://trac.webkit.org/changeset/111041 for (bug #70437). The state of the full screen button does not need to be reflected in CSS.
Jer Noble
Comment 2 2012-04-17 12:12:22 PDT
WebKit Review Bot
Comment 3 2012-04-20 14:45:29 PDT
Comment on attachment 137580 [details] Patch Rejecting attachment 137580 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: y/autoinstalled/mechanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 113] No route to host> Full output: http://queues.webkit.org/results/12476285
Jer Noble
Comment 4 2012-04-20 15:34:14 PDT
Jer Noble
Comment 5 2012-04-20 17:14:15 PDT
Rolled out commit in r114804. Committed r114804: <http://trac.webkit.org/changeset/114804>
Jer Noble
Comment 6 2012-04-20 17:14:39 PDT
Reopening after rollout.
Ahmad Saleem
Comment 7 2023-10-12 12:50:23 PDT
I didn't manage to find anything with this 'media-exit-fullscreen-button' except some tests in CSSOM and 'js' file for Developer Tools. I think we don't have these anymore and we can close this bug. CCing - Eric, Dana and Jer Noble.
Note You need to log in before you can comment on or make changes to this bug.