media-exit-fullscreen-button (and related enums) is unnecessary and should be removed. https://bugs.webkit.org/show_bug.cgi?id=84162

Reviewed by Eric Carlson.

No new tests; no change in functionality so covered by existing tests.

Remove the media-exit-fullscreen-button keyword, and rename media-enter-fullscreen-button to
media-fullscreen-button.

* css/CSSPrimitiveValueMappings.h:
(WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
* css/CSSValueKeywords.in:
* css/mediaControls.css:
(audio::-webkit-media-controls-fullscreen-button, video::-webkit-media-controls-fullscreen-button):
* platform/ThemeTypes.h:
* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paint):

Canonical link: https://commits.webkit.org/101980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114789 268f45cc-cd09-0410-ab3c-d52691b4dbfc